# FatFsBin

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.c  main.h
App/: FatFsTest.c  FatFsTest.h  logicApp.c  logicApp.h  winHal.c  winHal.h  winSerial.c  winSerial.h
FatFs/: diskio.c  ffconf.h
workingSpace/filesToBePackd/: test.txt  test_ch.txt
